--- a/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.scss
@@ -2,3 +2,10 @@
 table{
     width: 100%;
 }
+
+.btn-add{
+    border: 1px #6200EE solid;
+    color: #6200EE;
+    margin-left:40px ;
+    padding: 5px 30px 5px 30px;
+  }
