--- a/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.scss
@@ -6,7 +6,7 @@
     color: white;
     border: 1px solid #333333;
     border-radius: 30px 30px 0px 0px;
-
+    margin-top: 20px;
     &__title {
         display: flex;
         width: 90%;
