Cambios de dialogos request y rutas

--- a/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
@@ -1,1 +1,58 @@
-<p>evaluations-progress works!</p>
+<div class="container">
+    <div class="container--search">
+        <mat-toolbar class="container--search__toolbar">
+            <span class="container--search__toolbar--title">
+                En proceso
+            </span>
+            <button mat-icon-button class="container--search__toolbar--icon" (click)="settingDialog()">
+                <mat-icon>settings</mat-icon>
+            </button>
+            <div class="container--search__toolbar--search">
+                <mat-icon matSuffix style="color: rgba(0, 0, 0, 0.6);">search</mat-icon>
+                <input matInput placeholder="Buscar">
+            </div>
+        </mat-toolbar>
+        <div class="container--search__toolbar--number">
+            <span>
+                08
+            </span>
+        </div>
+    </div>
+    <div class="body">
+        <div class="box">
+        <div class="header-box">
+            <div class="priority"></div>
+            <div>
+            <mat-menu #requestsMenu="matMenu">
+                <button mat-menu-item>
+                <mat-icon>play_circle_outline</mat-icon> Iniciar
+                </button>
+                <button mat-menu-item>
+                <mat-icon>visibility</mat-icon> Observacion
+                </button>
+                <button mat-menu-item>
+                <mat-icon>timeline</mat-icon> Línea de tiempo
+                </button>
+            </mat-menu>
+            <button mat-icon-button [matMenuTriggerFor]="requestsMenu">
+                <mat-icon>more_vert</mat-icon>
+            </button>
+            </div>
+        </div>
+        <div class="info-box">
+            <div class="lj">OT 00000 - <span>(Orden de trabajo) </span>  </div>
+            <div class="info-row">Componente: <span>XXXXXX </span> </div>
+            <div class="info-row"> Nro parte: <span> XXXXXX</span> </div>
+            <div class="info-row"> Fecha: <span>03/03/2020 - 07:30:45 </span> </div>
+        </div>
+        <div>
+            <div class="progress-time"></div>
+            <div class="progress-dynamic">
+            <div class="progress-transparent"></div>
+            <div class="progress-black"></div>
+            </div>
+            <div class="progress-view">40 min</div>
+        </div>
+        </div>
+    </div>
+</div>
