--- a/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.scss
@@ -1,115 +1,224 @@
-.container{
-    width: 99.6%;
-    height: 100vh;
-    border: 1px solid #333333;
-    border-radius: 12px;
-    &--search {
-        display: flex;
-        &__toolbar {
-            display: flex;
-            background-color: #333333;
-            height: 75px;
-            width: 90%;
-            border-radius: 10px 0px 0px 0px;
-            &--title {
-                font-family: Poppins;
-                font-style: normal;
-                font-weight: 600;
-                font-size: 28px;
-                line-height: 36px;
-                color: #ffffff;
-                margin-left: 49px;
-            }
-            &--icon {
-                color: #ffffff;
-                margin-left: 40px;
-            }
-            &--number {
-                width: 10%;
-                font-family: Poppins;
-                border-bottom: 1px solid #333333;
-                font-style: normal;
-                font-weight: bold;
-                font-size: 36px;
-                line-height: 36px;
-                color: #333333;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-            &--search {
-                width: 100%;
-                // margin-left: 328px;
-                height: 54px;
-                display: flex;
-                align-items: center;
-                margin-left: 150px;
-                background-color: #ffffff;
-            }
-        }
-    }
+.container {
+    margin: 0px;
+    padding: 0px;
 }
 
-.container-search {
+.requests {
     display: flex;
-    &__toolbar {
+    color: white;
+    border: 1px solid #333333;
+    border-radius: 20px 20px 0px 0px;
+    margin-top: 20px;
+    &__title {
         display: flex;
-        background-color: #333333;
-        height: 75px;
+        align-items: stretch;
         width: 90%;
-        border-radius: 10px 0px 0px 0px;
-        &--title {
-            font-family: Poppins;
+        background: #333333;
+        border-radius: 20px 0px 0px 0px;
+        height: 65px;
+
+        &--name {
+            font-family: "Poppins", sans-serif;
             font-style: normal;
             font-weight: 600;
             font-size: 28px;
             line-height: 36px;
-            color: #ffffff;
-            margin-left: 49px;
+            margin: 0px 24px 0px 24px;
+            align-self: center;
         }
+
         &--icon {
-            color: #ffffff;
-            margin-left: 40px;
+            cursor: pointer;
+            align-self: center;
+
+            .mat-icon {
+                font-size: 35px;
+                width: 35px;
+                height: 35px;
+            }
         }
-        &--number {
-            width: 10%;
-            font-family: Poppins;
-            border-bottom: 1px solid #333333;
-            font-style: normal;
-            font-weight: bold;
-            font-size: 36px;
-            line-height: 36px;
-            color: #333333;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+
         &--search {
-            width: 100%;
-            // margin-left: 328px;
-            height: 54px;
             display: flex;
-            align-items: center;
-            margin-left: 150px;
-            background-color: #ffffff;
+            min-width: 100px;
+            width: 45%;
+            padding-left: 15px;
+            font-family: "Montserrat", sans-serif;
+            font-size: 14px;
+            font-weight: 300;
+            background-color: #fff;
+            height: 40px;
+            align-self: center;
+            border-radius: 20px 20px;
+            margin-right: 20px;
         }
+
+        &--input {
+            width: 100%;
+            margin-top: 0;
+            color: #828282;
+
+            &::placeholder {
+                color: #aeaeae;
+            }
+            &:focus {
+                outline: none;
+            }
+        }
+
+        &--button {
+            max-width: 45px;
+            width: 100%;
+            padding: 0 !important;
+            color: #cbcbcb;
+        }
+    }
+
+    &__quantity {
+        padding: 20px 15px 15px 15px;
+        margin-right: 0px;
+        background: white;
+        color: #333333;
+        font-weight: bold;
+        font-size: 3em;
+        //border: 1px solid #333333;
+        border-radius: 0px 0px 0px 0px;
     }
 }
 
-textarea:focus,
-input:focus {
-    outline: none;
-    border:none;
+.cards-container {
+    display: flex;
+    // justify-content: space-evenly;
+    padding: 30px;
+    background: #f0eded;
+}
+
+.box {
+    margin: 10px 15px;
+    border: solid 1px #ccc;
+    color: rgba(0, 0, 0, 0.87);
+    box-sizing: border-box;
+    background: #ffffff;
+    border-radius: 10px;
+    position: relative;
+    width: 250px;
+}
+
+.header-box {
+    border-bottom: 1px solid #9e9e9e;
+    margin: 0 8px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px;
+}
+
+.priority {
+    background: #27ae60;
+    border-radius: 5px;
+    font-family: Roboto;
+    color: #ffffff;
+    text-align: center;
+    padding: 0px 15px;
+}
+
+.number {
+    font-family: Rubik;
+    font-weight: bold;
+    color: #828282;
+}
+
+::ng-deep .mat-icon-button {
+    width: 25px !important;
+    line-height: 20px !important;
+    height: 20px !important;
+}
+
+.info-box {
+    padding: 5px 10px;
+}
+
+.info-box .lj {
+    font-family: Roboto;
+    font-weight: bold;
+    color: #2b2b2b;
+    background: #eeb40a;
+    border-radius: 5px;
+    text-align: center;
+    padding: 2px 7px;
+    margin-bottom: 5px;
+    font-size: 1.2em;
+}
+
+.info-row {
+    font-family: Roboto;
+    color: #2b2b2b;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #bdbdbd;
+}
+
+.date {
+    font-size: x-small;
+}
+
+.progress-time {
+    background: linear-gradient(90deg, #77b254 0%, #ffcc4d 51.04%, #de2e43 100%);
+    border-radius: 0px 0px 10px 10px;
+    padding: 3px 10px;
+    height: 30px;
+}
+
+/*progress bar*/
+
+.progress-dynamic {
+    border-radius: 0px 0px 10px 10px;
+    background: linear-gradient(90deg, #77b254 0%, #ffcc4d 51.04%, #de2e43 100%);
+    display: flex;
+    flex-wrap: wrap;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    justify-content: right;
+}
+
+.progress-transparent {
+    border-radius: 0px 0px 0px 10px;
+    height: 30px;
+    background-color: transparent;
+}
+
+.progress-black {
+    border-radius: 0px 0px 10px 0px;
+    height: 30px;
+    background-color: black;
+}
+
+.progress-view {
+    position: absolute;
+    bottom: -4px;
+    left: -3px;
+    width: 100%;
+    height: 30px;
+    background-color: transparent;
+    color: white;
+    text-align: center;
     font-family: Roboto;
     font-style: normal;
     font-weight: bold;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.15px;
-    color: rgba(0, 0, 0, 0.6);
+    line-height: 30px;
+    border-bottom: 4px solid #efefef;
+    border-left: 3px solid #efefef;
+    box-sizing: content-box;
+    border-radius: 0px 0px 10px 10px;
 }
-input{
-    border:none;
+
+input {
+    border: none;
+    border-radius: 0px 25px 25px 0px;
 }
 
 ::placeholder {
@@ -121,4 +230,3 @@ input{
     letter-spacing: 0.15px;
     color: rgba(0, 0, 0, 0.6);
 }
-
