--- a/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.scss
@@ -216,3 +216,19 @@
     box-sizing: content-box;
     border-radius: 0px 0px 10px 10px;
 }
+
+
+input {
+    border: none;
+    border-radius: 0px 25px 25px 0px;
+}
+
+::placeholder {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.15px;
+    color: rgba(0, 0, 0, 0.6);
+}
