--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
@@ -24,6 +24,7 @@
     <mat-list-item role="listitem" class="listitem-content">Usuario</mat-list-item>
     <mat-list-item role="listitem" class="listitem-content">WOF (Orden de fabricación)</mat-list-item>
     <mat-list-item role="listitem" class="listitem-content">Trabajo</mat-list-item>
+    <mat-list-item role="listitem" class="listitem-content">Taller</mat-list-item>
     <mat-list-item role="listitem" class="listitem-content">Observaciones</mat-list-item>
     <mat-divider style="margin-top: 10px;"></mat-divider>
     <form>
