:art: Images dialog process

--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
@@ -13,7 +13,7 @@
     <mat-divider style="margin-top: 10px;"></mat-divider>
     <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
 </h2>
-<mat-dialog-content class="mat-typography" style="color: gray;">
+<mat-dialog-content class="mat-typography">
     <!-- <mat-list role="list"> -->
     <mat-list-item role="listitem" class="listitem-content">OT MAIN:</mat-list-item>
     <mat-list-item role="listitem" class="listitem-content">OT CHILD:</mat-list-item>
