--- a/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
@@ -32,9 +32,9 @@
               <mat-icon>stop</mat-icon> 
               Finalizar
             </button>
-            <button mat-menu-item>
+            <button mat-menu-item (click)="imagesDialog()">
               <mat-icon>add_photo_alternate</mat-icon> 
-              Imagenes
+              Imágenes
             </button>
             <button mat-menu-item>
               <mat-icon>timeline</mat-icon> 
