--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-images-dialog/evaluations-images-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-images-dialog/evaluations-images-dialog.component.html
@@ -1,1 +1,34 @@
-<p>evaluations-images-dialog works!</p>
+<h2 mat-dialog-title>
+    <div class="container-h2">
+        <button mat-icon-button class="container-h2__button">
+            <mat-icon class="container-h2__icon">add_photo_alternate</mat-icon>
+            <span class="container-h2__title">
+                Imágenes
+            </span>
+        </button>
+        <button mat-icon-button mat-dialog-close>
+            <mat-icon class="container-h2__icon-close">close</mat-icon>
+        </button>
+    </div>
+    <mat-divider style="margin-top: 10px;"></mat-divider>
+    <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
+</h2>
+<mat-dialog-content class="mat-typography">
+    <div class="container-h2__image">
+        <mat-card class="mat-elevation-z0">
+            <img src="../../../../../../../assets/img/default.png" alt="">
+        </mat-card>
+        <mat-card class="mat-elevation-z0">
+            <img src="../../../../../../../assets/img/default.png" alt="">
+        </mat-card>
+        <div class="card-img">
+            <div class="card-img__background">
+              
+            </div>
+        </div>
+    </div>
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+    <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
+    <button type="button" mat-raised-button color="primary" class="footer__btn-save" cdkFocusInitial>Aceptar</button>
+</mat-dialog-actions>
