--- a/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.scss
@@ -1,4 +1,8 @@
 
+.container-table{
+    margin-top: 30px;
+}
+
 table{
     width: 100%;
 }
@@ -6,6 +10,6 @@ table{
 .btn-add{
     border: 1px #6200EE solid;
     color: #6200EE;
-    margin-left:40px ;
-    padding: 5px 30px 5px 30px;
+    margin-left:10px ;
+    padding: 0px 30px 0px 30px;
   }
