--- a/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.scss
@@ -57,6 +57,8 @@
             width: 100%;
             margin-top: 0;
             color: #828282;
+            border: transparent;
+            border-radius: 0px 20px 20px 20px;
 
             &::placeholder {
                 color: #aeaeae;
