--- a/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.html
@@ -5,32 +5,35 @@
     CREAR
   </button>
 
-    <div>   <!-- *ngIf="improvement$ |async" -->
+    <div class="container-table">   <!-- *ngIf="improvement$ |async" -->
         <table mat-table [dataSource]="historyDataSource" class="mat-elevation-z8">
   
-          <ng-container matColumnDef="workOrder">
+          <ng-container matColumnDef="otMain">
             <th mat-header-cell *matHeaderCellDef> Orden de trabajo </th>
             <td mat-cell *matCellDef="let element"> {{(element.date.seconds * 1000) | date : 'dd/MM/yy'}} </td>
           </ng-container>
   
-          <ng-container matColumnDef="operation">
+          <ng-container matColumnDef="otChild">
             <th mat-header-cell *matHeaderCellDef>Segmento/Operacion </th>
             <td mat-cell *matCellDef="let element"> {{element.name}} </td>
           </ng-container>
-          <ng-container matColumnDef="correlative">
+
+          <ng-container matColumnDef="position">
             <th mat-header-cell *matHeaderCellDef> Correlativo </th>
             <td mat-cell *matCellDef="let element"> {{element.component}} </td>
           </ng-container>
-          <ng-container matColumnDef="nPart">
-            <th mat-header-cell *matHeaderCellDef>N° de parte </th>
+
+          <ng-container matColumnDef="partNumber">
+            <th mat-header-cell *matHeaderCellDef>Nro de parte</th>
             <td mat-cell *matCellDef="let element"> {{element.model}} </td>
           </ng-container>
+
           <ng-container matColumnDef="description">
             <th mat-header-cell *matHeaderCellDef>Descripcion </th>
             <td mat-cell *matCellDef="let element"> {{element.criticalPart ? 'Si':'No'}} </td>
           </ng-container>
                   
-          <ng-container matColumnDef="state">
+          <ng-container matColumnDef="internalStatus">
             <th mat-header-cell *matHeaderCellDef> Estado </th>
             <td mat-cell *matCellDef="let element">
               <button mat-button (click)="showImprovementEntry(element)"
@@ -39,6 +42,7 @@
               </button>
             </td>
           </ng-container>
+
           <ng-container matColumnDef="result">
               <th mat-header-cell *matHeaderCellDef> Resultado </th>
               <td mat-cell *matCellDef="let element"> {{element.createdBy.name}} </td>
@@ -59,15 +63,58 @@
               <td mat-cell *matCellDef="let element"> {{element.createdBy.name}} </td>
           </ng-container>
 
-          <ng-container matColumnDef="workshopAttention">
+          <ng-container matColumnDef="status">
               <th mat-header-cell *matHeaderCellDef>Tipo de atencion </th>
               <td mat-cell *matCellDef="let element"> {{element.createdBy.name}} </td>
           </ng-container>
 
-          <ng-container matColumnDef="applicationDate">
+          <ng-container matColumnDef="registryDate">
               <th mat-header-cell *matHeaderCellDef> Fecha de Solicitud </th>
               <td mat-cell *matCellDef="let element"> {{element.createdBy.name}} </td>
+          </ng-container> 
+
+          <ng-container matColumnDef="user">
+              <th mat-header-cell *matHeaderCellDef> Usuario </th>
+              <td mat-cell *matCellDef="let element"> {{element.createdBy.name}} </td>
           </ng-container>  
+
+          <ng-container matColumnDef="wof">
+              <th mat-header-cell *matHeaderCellDef>Solicitud TR </th>
+              <td mat-cell *matCellDef="let element"> {{element.createdBy.name}} </td>
+          </ng-container>  
+
+          <ng-container matColumnDef="task">
+              <th mat-header-cell *matHeaderCellDef> Trabajo </th>
+              <td mat-cell *matCellDef="let element"> {{element.createdBy.name}} </td>
+          </ng-container> 
+          
+          <ng-container matColumnDef="actions" stickyEnd>
+            <th mat-header-cell *matHeaderCellDef>
+              Acciones
+            </th>
+            <td mat-cell *matCellDef="let element; let i = index">
+              <ng-container>
+                <mat-menu #rawMenu="matMenu">                  
+                  <button class="w3-small" mat-menu-item (click)="openDialog('edit', element, i)">
+                    <mat-icon>edit</mat-icon>
+                    Editar
+                  </button>
+                  <button *ngIf="element.state==='registered'" class="w3-small" mat-menu-item (click)="openDialog('delete',element,i)">
+                    <mat-icon>delete</mat-icon>
+                    Borrar
+                  </button>
+                  <button class="w3-small" mat-menu-item (click)="openDialog('validate', element, i)">
+                    <mat-icon>check_circle</mat-icon>
+                    Observaciones
+                  </button>
+                </mat-menu>
+  
+                <button mat-icon-button [matMenuTriggerFor]="rawMenu">
+                  <mat-icon>more_vert</mat-icon>
+                </button>
+              </ng-container>
+            </td>
+          </ng-container>
             
           <tr mat-header-row *matHeaderRowDef="improvementDisplayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: improvementDisplayedColumns;"></tr>
