:art: Consult progress dialog

--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-images-dialog/evaluations-images-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-images-dialog/evaluations-images-dialog.component.html
@@ -10,7 +10,7 @@
             <mat-icon class="container-h2__icon-close">close</mat-icon>
         </button>
     </div>
-    <mat-divider style="margin-top: 10px;"></mat-divider>
+    <mat-divider style="margin-top: 20px;"></mat-divider>
     <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
 </h2>
 <mat-dialog-content class="mat-typography">
@@ -30,5 +30,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
-    <button type="button" mat-raised-button color="primary" class="footer__btn-save" cdkFocusInitial>Aceptar</button>
+    <button type="button" mat-raised-button color="primary" class="footer__btn-save" cdkFocusInitial>ACEPTAR</button>
 </mat-dialog-actions>
