--- a/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
@@ -44,7 +44,7 @@
               <mat-icon>remove_red_eye</mat-icon>
               Observaciones
             </button>
-            <button mat-menu-item>
+            <button mat-menu-item (click)="consultDialog()">
               <mat-icon>help</mat-icon>
               Consultar
             </button>
